Fix scrollbar wrap behavior

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 :root {
-  --terminal-background: rgba(0, 0, 0, 0.95);
+  --terminal-background: rgba(0, 0, 0, 1);
   --border-radius: 12px;
   --input-color: silver;
   --input-prefix-color: #3a3a3a;
@@ -42,6 +42,7 @@ html, body {
   overflow-y: auto;
   overflow-x: hidden;
   font-size: var(--font-size);
+  padding-right: 1em; /* Reserve space for scrollbar */
 }
 
 .input-container {
@@ -80,11 +81,11 @@ html, body {
 }
 
 #output::-webkit-scrollbar {
-  width: 0;
+  width: 0.5em;
 }
 
 #output:hover::-webkit-scrollbar {
-  width: 12px
+  width: 0.5em;
 }
 
 #output::-webkit-scrollbar-track {
